Myriad assorted changes and refactoring